Cherry-pick r281500. rdar://problem/82350929

(r281473) stress/for-in-has-own-property-shouldnt-flush-registers.js failing on Debug
    https://bugs.webkit.org/show_bug.cgi?id=229448

    Reviewed by Mark Lam.

    JSTests:

    Fix typo in test name.

    * stress/for-in-in-by-val-should-flush-registers.js: Renamed from JSTests/stress/for-in-in-by-val-shouldnt-flush-registers.js.

    Source/JavaScriptCore:

    Add missing exception checks.

    * dfg/DFGOperations.cpp:
    (JSC::DFG::JSC_DEFINE_JIT_OPERATION):

    Canonical link: https://commits.webkit.org/240873@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@281500 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/240672.13@safari-612-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-612-branch@281605 268f45cc-cd09-0410-ab3c-d52691b4dbfc